# qpointz

./: .cursorignore  .gitignore  .gitlab-ci.yml  .lla  .releaserc  .sbtopts  .sdkmanrc  AGENTS.md  CLAUDE.md  Makefile  README.md  README.rst  VERSION  build.gradle.kts  build.sbt  dumper.py  flow.sbt  flow_completion  gradle.properties  lakehouse.sbt  libs.versions.toml  main_completion  pebble.sbt  scalastyle-config.xml  settings.gradle.kts  sonar-project.properties  surface.sbt
.cursor/: README.md  context.md  rules
.gitlab/: .common.yml  .jobs.yml  .rules.yml  .vars.yml  Makefile  jobs.yml  vars.yml
ai/: .gitlab-ci.yml  build.gradle.kts  settings.gradle.kts
apps/: .gitlab-ci.yml  Makefile  build.gradle.kts  settings.gradle.kts
apps/mill-regression-cli/: IMPLEMENTATION_NOTES.md  README.md  pyproject.toml  regression-diff-table-builder.md  regression_diff_config.yaml
apps/mill-regression-cli/regression_diff/: __init__.py  archive.py  builder.py  builder_action_grouped.py  builder_multi.py  classifier.py  cli.py  comparator.py  config.py  matcher.py  models.py  models_action_grouped.py  models_multi.py  normalizer.py  parser.py  version_selector.py
apps/mill-regression-cli/regression_diff/formatters/: __init__.py  base.py  csv.py  csv_multi.py  json.py  json_multi.py  markdown.py  markdown_multi.py
apps/mill-regression-cli/regression_diff/metric_comparers/: __init__.py  base.py  boolean.py  numeric.py  registry.py  set.py  string.py
apps/mill-regression-cli/regression_diff/reports/: __init__.py  config.py  extractor.py  generator.py  models.py
apps/mill-regression-cli/regression_diff/reports/formatters/: base.py  csv.py
apps/mill-regression-cli/tests/: __init__.py  test_builder_multi.py  test_formatters_multi.py  test_metric_comparers.py  test_normalizer.py  test_parser.py
apps/mill-regression-cli/tests/fixtures/: sample_baseline.json  sample_candidate.json
build-logic/: build.gradle.kts
classic/: .gitlab-ci.yml
clients/: .gitlab-ci.yml  Makefile  build.gradle.kts
clients/mill-py/: .gitignore  LICENSE  README.md  codegen.py  pyproject.toml
clients/mill-py/mill/: __init__.py  _http_common.py  auth.py  client.py  discovery.py  exceptions.py  result.py  types.py  vectors.py
clients/mill-py/mill/_proto/: common_pb2.py  common_pb2.pyi  data_connect_svc_pb2.py  data_connect_svc_pb2.pyi  data_connect_svc_pb2_grpc.py  dialect_pb2.py  dialect_pb2.pyi  dialect_pb2_grpc.py  statement_pb2.py  statement_pb2.pyi  statement_pb2_grpc.py  vector_pb2.py  vector_pb2.pyi  vector_pb2_grpc.py
clients/mill-py/mill/_proto/substrait/: algebra_pb2.py  algebra_pb2.pyi  algebra_pb2_grpc.py  capabilities_pb2.py  capabilities_pb2.pyi  capabilities_pb2_grpc.py  extended_expression_pb2.py  extended_expression_pb2.pyi  extended_expression_pb2_grpc.py  function_pb2.py  function_pb2.pyi  function_pb2_grpc.py  parameterized_types_pb2.py  parameterized_types_pb2.pyi  parameterized_types_pb2_grpc.py  plan_pb2.py  plan_pb2.pyi  plan_pb2_grpc.py  type_expressions_pb2.py  type_expressions_pb2.pyi  type_expressions_pb2_grpc.py  type_pb2.py  type_pb2.pyi  type_pb2_grpc.py
clients/mill-py/mill/_proto/substrait/extensions/: extensions_pb2.py  extensions_pb2.pyi  extensions_pb2_grpc.py
clients/mill-py/mill/_transport/: __init__.py  _grpc.py  _http.py
clients/mill-py/mill/aio/: __init__.py  client.py  result.py
clients/mill-py/mill/aio/_transport/: __init__.py  _grpc.py  _http.py
clients/mill-py/mill/extras/: __init__.py  arrow.py  pandas.py  polars.py
clients/mill-py/mill/ibis/: __init__.py  backend.py  compiler.py  types.py
clients/mill-py/mill/metadata/: __init__.py  bulk.py  client.py  dto.py
clients/mill-py/mill/metadata/aio/: __init__.py  client.py
clients/mill-py/mill/schema_explorer/: __init__.py  client.py  dto.py
clients/mill-py/mill/schema_explorer/aio/: __init__.py  client.py
clients/mill-py/mill/sql/: __init__.py  dialect.py
clients/mill-py/mill/sqlalchemy/: __init__.py  dbapi.py  dialect.py
clients/mill-py/millclient/proto/io/qpointz/mill/: __init__.py
clients/mill-py/tests/: conftest.py
clients/mill-py/tests/integration/: conftest.py  test_async_query.py  test_auth.py  test_handshake.py  test_ibis.py  test_platform_http.py  test_query.py  test_schemas.py
clients/mill-py/tests/unit/: _synth.py  conftest.py  test_arrow.py  test_async_client.py  test_async_result.py  test_async_transport.py  test_auth.py  test_client.py  test_discovery.py  test_exceptions.py  test_http_common.py  test_ibis.py  test_metadata_bulk.py  test_metadata_client.py  test_metadata_client_entities.py  test_metadata_client_facet_catalog.py  test_metadata_dto.py  test_pandas.py  test_platform_async_clients.py  test_polars.py  test_result.py  test_scaffold.py  test_schema_explorer_client.py  test_schema_explorer_dto.py  test_sqlalchemy.py  test_transport.py  test_types.py  test_vectors.py
cloud/: .gitlab-ci.yml  build.gradle.kts
core/: .gitlab-ci.yml  build.gradle.kts  settings.gradle.kts
data/: .gitlab-ci.yml  build.gradle.kts  cfg.new
delta/: .gitignore  .gitlab-ci.yml  build.gradle.kts  cat  gradle.properties  settings.gradle.kts
delta-py/: codegen.py  protoc.txt
deploy/: Makefile  README.md
docs/: .gitignore  .gitlab-ci.yml  CODEBASE_ANALYSIS_CURRENT.md  Makefile  local.sh  mill-configuration-guide.md  mkdocs.yml  requirements.txt  settings.gradle.kts
docs-design/: settings.gradle.kts
flow/: .gitlab-ci.yml  README.md  build.sbt  scalastyle-config.xml
metadata/: .gitlab-ci.yml  build.gradle.kts
mill-clients/: .gitlab-ci.yml
mill-ui/: .gitignore  package-lock.json  package.json  packages.removed  stats.html  vite.config.ts  (+1 more)
misc/examples/ai-mcp-langchain-skymill/: .env.example  .gitignore  README.md  cursor-mcp.env.example.json  cursor-mcp.json.example  mill_mcp_config.py  pyproject.toml  requirements.txt  skymill_agent.py  smoke_tools.py
misc/mill-py/: .test-profiles  codegen.py  pyproject.toml  sample.ipynb  sample_func.ipynb
misc/mill-py/millclient/: __init__.py
misc/mill-py/tests/: test_connect.py
misc/mill-py/tests/unit/: test_create_client.py
(+7386 files in other folders)
