[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-mcp-langchain-skymill"
version = "0.1.0"
description = "LangChain Python demo agent calling Mill MCP over Streamable HTTP (Skymill)"
authors = ["vm <vm@qpointz.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<4.0"
langchain = "^1.0"
langchain-openai = "^1.0"
langchain-mcp-adapters = ">=0.1.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
